@@ -1,5 +1,8 @@
 0.20.43	UNRELEASED
 
+ * Drop caching of full HTTP response. Attempt #2.
+   (jelmer Vernooĳ, Antoine Lambert, #966)
+
 0.20.42	2022-05-24
 
  * Drop ``RefsContainer.watch`` that was always flaky.
